--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -4,22 +4,24 @@
 	top: 0;
 	left: 0;
 	display: block;
-	background-color: #003366; /*Color de la navbar*/
+	background-color: #119970; /*Color de la navbar*/
+	width: 100vw; 
 	height: 9vh;
 	z-index: 1000;
 	ul {
 		display: flex;
-		justify-content:end;
+		justify-content:left;
 		align-items: center;
 		padding: 0 5vw;
-		margin: 0;
+		margin: 1vh 0;
 		height: 100%;
 		li {
 			display: flex;
 			align-items: center;
-			padding: 0 60px;
+			padding: 0 50px;
 			position: relative;
 			height: 100%;
+			
 			a {
 				color: white;
 				font-size: 0.9em;
@@ -29,6 +31,7 @@
 				transition: border-color 0.3s ease;
 				padding: 0 10px 3px 10px;
 				box-sizing: border-box;
+				
 			}
 			:not(.active)::before {
 				content: "";
@@ -37,7 +40,7 @@
 				left: 0;
 				width: 100%;
 				height: 3px;
-				background-color: #006edf;
+				background-color: #ffffff;
 				transform: scaleX(0);
 				transform-origin: bottom;
 				transition: transform 0.3s ease;
@@ -48,13 +51,24 @@
 			}
 			.active {
 				font-weight: bold;
-				background-color: #eef7ff;
-				color: #002651;
+				background-color: #ffffff;
+				color: #0c5757;
 				margin: 0;
 				padding-bottom: 0;
-				border: 0;
+				border: none;
 				height: 100%;
-				line-height: 9.1vh;
+				line-height: 7.0vh;
+				padding: 0 20px;
+				margin: 0 10px;
+				
+    /* Solo esquinas superiores redondeadas */
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+
+    /* Esquinas inferiores cuadradas */
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+	 box-shadow: 0 4px 0 0 #64a888; /* Simula que sobresale hacia abajo */
 			}
 		}
 	}
@@ -91,7 +105,7 @@
 
 	.nav-menu.activado ul {
 		display: flex;
-		background-color: #eef7ff;
+		background-color: #ffeeee;
 		justify-content: center;
 		padding: 0;
 	}
@@ -105,12 +119,12 @@
 		width: 100%;
 		height: 60px;
 		a {
-			color: #003366;
+			color: #660000;
 			font-weight: bold;
 			font-size: 0.9em;
 			text-decoration: none;
 			position: relative;
-			border-bottom: none;
+			border-bottom: one;
 			transition: border-color 0.3s ease;
 			padding-left: 5px;
 			box-sizing: border-box;
@@ -122,7 +136,7 @@
 	.nav-menu ul {
 		display: none;
 		flex-direction: column;
-		background-color: #003366;
+		background-color: #660000;
 		position: absolute;
 		top: 9vh;
 		left: 0;
@@ -145,7 +159,7 @@
 		width: 100%;
 		height: 60px;
 		a {
-			color: #003366;
+			color: #660000;
 			font-weight: bold;
 			font-size: 0.9em;
 			text-decoration: none;
