--- a/frontend/src/styles/users.css
+++ b/frontend/src/styles/users.css
@@ -1,15 +1,25 @@
-.main-container {
+.main-container-user {
+display: flex; 
+    justify-content: center;
+    align-items: flex-start;
+    gap: 40px; 
+    padding: 20px; 
+    flex-wrap: wrap; 
+    width: 100%;
+    max-width: 1000px;
+    margin-top: 40px; 
+    margin-bottom: 40px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100;
     width: 100%;
 }
 
 .table-container {
-    width: 90%;
-    max-width: 1400px;
+    width: 100%;
+    max-width: 1500px;
     margin: 0 auto;
 }
 
@@ -21,7 +31,7 @@
 }
 
 .title-table {
-    color: #003366;
+    color: #2e4c48;
     margin-left: 70px;
 }
 
