--- a/frontend/src/styles/todosReclamos.css
+++ b/frontend/src/styles/todosReclamos.css
@@ -1,3 +1,12 @@
+.formularioReclamo div {
+    text-align: center;
+    align-items: center;
+}
+
+.flechas-reclamos button{
+    width: 250px;
+}
+
 .switch-btn {
     width: 40px;
     height: 20px;
@@ -52,4 +61,45 @@
     box-shadow: 0 4px 24px rgba(0, 0, 0, 0.08);
     color: #2e4c48;
     font-family: 'Arial', sans-serif;
+}
+
+.btn-MostrarReclamos {
+    display: none !important;
+}
+
+div h3 {
+    text-align: center;
+    margin-bottom: 24px;
+}
+
+.buscar-reclamo {
+    display: flex;
+}
+
+.buscar-reclamo {
+    margin-bottom: 1rem;
+}
+
+.buscar-reclamo button {
+    min-width: 100%;
+    margin-left: 0.5rem;
+    background: #119970;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    padding: 8px 18px;
+    font-size: 15px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s;
+}
+.buscar-reclamo button:hover {
+    background: #0e7d5f;
+    transform: scale(1.02);
+}
+
+.buscar-reclamo .reclamos-lista {
+    list-style: none;
+    padding: 0;
+    min-width: 100%;
 }
