--- a/frontend/src/styles/editarReclamo.css
+++ b/frontend/src/styles/editarReclamo.css
@@ -17,16 +17,16 @@
     color: #2e4c48;
     font-family: 'Arial', sans-serif;
 }
+
 .reclamo-overlay-btns {
     margin-top: 1rem;
     display: flex;
-    justify-content: flex-end;
+    align-items: center;
+    justify-content: center;
 }
 
-
 .reclamo-overlay-btns .cancelar-btn {
-    margin-left: 1rem;
-    background-color: #bdbdbd;
+    background-color: #682525;
     color: #fff;
     border: none;
     border-radius: 10px;
@@ -34,17 +34,47 @@
     font-size: 15px;
     font-weight: bold;
     cursor: pointer;
+    width: 120px;
     transition: background-color 0.3s, transform 0.2s;
 }
 
 .reclamo-overlay-btns .cancelar-btn:hover {
-    background-color: #757575;
+    background-color: #992525;
     transform: scale(1.02);
+}
+
+.reclamo-overlay-btns .guardar-btn {
+    background-color: #119970;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    padding: 8px 18px;
+    font-size: 15px;
+    font-weight: bold;
+    cursor: pointer;
+    width: 120px;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.reclamo-overlay-btns .guardar-btn:hover {
+    background-color: #14a47b;
+    transform: scale(1.02);
+}
+
+.estado-select {
+    width: 100%;
+    padding: 0.5rem;
+    border-radius: 10px;
+    border: 2px solid #bdbdbd;
+    background-color: #fff;
+    color: #2e4c48;
+    font-size: 15px;
+    font-weight: bold;
 }
 
 
 textarea {
-    width: 100%;
+    width: 300px;
     height: 100px;
     padding: 0.5rem;
     border-radius: 10px;
@@ -52,4 +82,11 @@ textarea {
     resize: none;
     background-color: #fff;
     color: #2e4c48;
+}
+
+.comentario-interno {
+    max-width: 300px;
+    word-break: break-word;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
 }
